fix the spacing on nav mobile

--- a/styles.css
+++ b/styles.css
@@ -66,15 +66,14 @@
     }
 
 
-        .navheader a {
-            left: 0;
-            display: flex;
-            color: #c0afa1;
-            padding: 5px;
-            padding-bottom: 30px;
-            margin-right: 400px;
-            text-decoration: none;
-        }
+    .navheader a {
+        display: center;
+        left: 0;
+        color: #c0afa1;
+        padding: 5px;
+        margin-top: -10px;
+        text-decoration: none;
+    }
 
 
         /* Navbar links */
@@ -87,8 +86,6 @@
         }
 
             .menu a {
-                padding: 40px;
-                padding-left: 40px;
                 margin-right: 30px;
                 right: 0;
                 color: #c0afa1;
